# arnis-fork

./: CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  PLAN.md  rust-toolchain.toml
.github/workflows/: ci.yml  game-ci.yml  web-ci.yml
BLOCKED/: needs-human.md
alpha/: README.md
alpha/churn-monitor/: README.md  churn_monitor.py
alpha/feedback/: README.md  discord-server-layout.md  in-game-survey-design.md
alpha/feedback/github-issue-templates/: bug-report.md  feature-wish.md
alpha/invite-system/: Cargo.toml
alpha/invite-system/src/: lib.rs
alpha/migrations/: 20260526120000_alpha_program.sql
alpha/nda/: alpha-nda-v1.md
alpha/recruitment/: applicant-form-schema.json  landing-copy.md
arnis-cli/: Cargo.toml
arnis-cli/src/: main.rs
arnis-core/: Cargo.toml
arnis-core/src/: emitter.rs  lib.rs  projection.rs
arnis-emitters/: Cargo.toml
arnis-emitters/examples/: bake-tile.rs
arnis-emitters/src/: lib.rs  overpass_ingest.rs
arnis-emitters/src/roblox/: heuristics.rs  manifest.rs  mod.rs  palette.rs  rarity.rs  schema.rs
arnis-emitters/src/roblox/schema/: manifest.v1.0.json  manifest.v1.1.json
arnis-emitters/tests/: e2e_overpass.rs  snapshot.rs
arnis-emitters/tests/fixtures/: aksla.overpass.json
arnis-emitters/tests/snapshots/: snapshot__snapshot_empty_manifest.snap  snapshot__snapshot_landmark_with_pageview_rarity.snap  snapshot__snapshot_three_building_tile.snap
backend/bake-preheat/: Cargo.toml
backend/bake-preheat/src/: landmarks.rs  lib.rs  pinned.rs  preheat.rs  top-1000-landmarks.toml
backend/bake-preheat/systemd/: wb-preheat.service  wb-preheat.timer
backend/bake-preheat/tests/: integration.rs
backend/bake-server/: Cargo.toml
backend/bake-server/src/: cache.rs  hmac.rs  lib.rs  main.rs  metrics.rs  sla.rs
backend/bake-server/systemd/: hmac-rotate.service  hmac-rotate.timer
backend/bake-server/tests/: cache_admin_q082.rs  end_to_end_q081.rs  hmac_rotation.rs  http.rs  metrics_endpoint.rs  sync_bake_q084.rs
backend/datastore-backup/: Cargo.toml
backend/datastore-backup/src/: backup.rs  crypto.rs  lib.rs  manifest.rs  restore.rs  roblox.rs  storage.rs
backend/datastore-backup/systemd/: wb-backup.service  wb-backup.timer
backend/datastore-backup/tests/: integration.rs  unit.rs
backend/db/: .env.example  Cargo.toml
backend/db/migrations/: 20260526000001_init_extensions_and_schemas.sql  20260526000002_osm_features.sql  20260526000003_wb_gameplay.sql  20260526072936_hmac_keys.sql
backend/db/src/: lib.rs
backend/db/tests/: migrations.rs
backend/observability/grafana/: wb-slo-dashboard.json
backend/observability/k6/: wb-sla-bake-load.js  wb-slo-load.js
backend/observability/prometheus/: wb-rules.yml
backend/osm-postgis-source/: Cargo.toml
backend/osm-postgis-source/fixtures/: aksla-overpass.json
backend/osm-postgis-source/sql/: reindex.sql  wb-flex.lua
backend/osm-postgis-source/src/: lib.rs  overpass.rs  postgis.rs
backend/osm-postgis-source/tests/: equivalence.rs
backend/scripts/: bake-tile.sh  db-create.sh  db-migrate.sh  osm-daily-update.sh  osm-import.sh  rotate-hmac.sh
docs/: HEARTBEAT.md  alpha-program-runbook.md  backup-restore.md  db-schema.md  design-system.md  devblog-cadence.md  observability.md  osm-pipeline.md  slos.md
goal-run/: COMPLETION-LEDGER.md
src/: args.rs  data_processing.rs  gui.rs  main.rs  osm_parser.rs  test_utilities.rs
src/world_editor/: bedrock.rs  common.rs  java.rs  mod.rs
web/: .gitignore  README.md  astro.config.mjs  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json
web/public/: robots.txt
web/scripts/: deploy.sh  worldbuilders.caddy  worldbuilders.nginx.conf
web/src/components/: Aside.astro  AuroraPulse.astro  CompassRose.astro  ContourBackground.astro  NavAtlas.astro  WaitlistForm.astro
web/src/content/: config.ts
web/src/content/blog/: 2026-05-26-pre-launch-aksla-bake.mdx
web/src/layouts/: Atlas.astro  Base.astro
web/src/pages/: alpha.astro  developers.astro  index.astro  press.astro  status.astro
web/src/pages/blog/: [...slug].astro  atom.xml.ts  feed.json.ts  index.astro  rss.xml.ts
web/src/styles/: global.css
web/tests/e2e/: blog.spec.ts  homepage.spec.ts
