[workspace]
resolver = "2"
members = [
    "arnis-core",
    "arnis-emitters",
    "arnis-cli",
]

[profile.release]
lto = "thin"
overflow-checks = true

# NOTE (Nettablering fork, Q463):
#
# This workspace is the first step of the engine-agnostic split described in
# DECISIONS.md / DEFINITION_OF_DONE.md. The upstream louis-e/arnis crate is
# preserved verbatim inside `arnis-cli/` so `cargo build` stays green and we
# can pull upstream changes with minimal merge friction.
#
# `arnis-core` (geometry primitives, projection, Overpass ingestion) and
# `arnis-emitters` (emitter trait + Minecraft / Luanti / Roblox-stub) are
# currently lightweight library crates with placeholder modules. Subsequent
# tickets (Q464+) will move the corresponding modules out of `arnis-cli/src/`
# and into these crates one subsystem at a time, with each move verified by
# `cargo build --workspace --release --no-default-features` staying green.
#
# Doing the full extraction in one commit would touch every file in the tree
# and make upstream rebases impossible — the staged approach is intentional.

# Freeze nbtx at the last pre-`NbtError`-rename commit; the pinned
# bedrockrs_proto_core leaves it unpinned so cargo update would break it.
[patch."https://github.com/bedrock-crustaceans/nbtx"]
nbtx = { git = "https://github.com/louis-e/nbtx", rev = "551c38ac74f2e68a07d3dbdd354faac0c0ac966e" }
