[package]
name = "arnis-core"
version = "0.1.0"
edition = "2021"
description = "Arnis core: engine-agnostic geometry primitives, projection, and OSM/Overture ingestion (Nettablering fork)"
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
