[package]
name = "arnis-emitters"
version = "0.1.0"
edition = "2021"
description = "Arnis emitters: engine-specific writers (Minecraft, Luanti, Roblox stub) (Nettablering fork)"
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[dependencies]
arnis-core = { path = "../arnis-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
jsonschema = { version = "0.18", default-features = false, features = ["draft202012", "resolve-file"] }
once_cell = "1"

[dev-dependencies]
proptest = "1"
