[workspace]

[package]
name = "bake-server"
version = "0.1.0"
edition = "2021"
publish = false

# Stand-alone crate (not in arnis workspace) so the staging deploy is decoupled
# from arnis-* refactor churn (Q464+). Real arnis integration lands in Q082.
# See /home/deploy/projects/worldbuilders/docs/grill/q470-build-step-8-hetzner-deploy-staging.md.

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["trace", "limit"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
chacha20poly1305 = "0.10"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
ulid = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
thiserror = "1"
filetime = "0.2"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
bake-queue = { path = "../bake-queue" }
prometheus = "0.13"
once_cell = "1"
async-stream = "0.3"
futures = "0.3"

[lib]
path = "src/lib.rs"

[[bin]]
name = "bake-server"
path = "src/main.rs"

[dev-dependencies]
axum-test = "15"
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
bake-queue = { path = "../bake-queue" }
async-trait = "0.1"
anyhow = "1"

[profile.release]
lto = "thin"
strip = true
