[package]
name = "datastore-backup"
version = "0.1.0"
edition = "2021"
publish = false

# Q099 — Nightly Roblox DataStore overlay export → age-encrypted archive
# → Hetzner Storage Box (primary) / Backblaze B2 (secondary) / local fallback.
# Stand-alone crate (not in arnis workspace) per the bake-server precedent
# so this can ship/upgrade independently from the in-flight arnis refactor.
# See /home/deploy/projects/worldbuilders/docs/grill/q099-backup-overlay-snapshots.md.

[dependencies]
age = { version = "0.10", features = ["armor"] }
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "wb-backup"
path = "src/bin/wb_backup.rs"

[[bin]]
name = "wb-backup-restore"
path = "src/bin/wb_backup_restore.rs"

[profile.release]
lto = "thin"
strip = true
