[package]
name = "wb-db"
version = "0.1.0"
edition = "2021"
publish = false
description = "Worldbuilders PostGIS schema + connection helper (sqlx)"

[dependencies]
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
    "macros",
    "migrate",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# testcontainers-rs spins up a throwaway PostGIS Docker container per test.
# We use GenericImage (postgis/postgis:16-3.4) — testcontainers-modules' Postgres
# helper hard-codes the upstream postgres image which lacks PostGIS.
testcontainers = "0.23"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "test-util"] }

[lib]
path = "src/lib.rs"
